<resources>
    <string name="app_name">IndonesiaKu - Instances</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_edit_email">Email is not Valid</string>
    <string name="error_edit_password">Password is not valid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_view_profile">View Profile</string>
</resources>